# opencascade-mesh-assembler

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd
src/: main.cpp
